# YouBikeLive

./: .gitignore  DBmigration.py  Procfile  README.md  app.py  demo.json  example.py  myapp.py  pyproject.toml  requirements.txt  youbike_data.db
DEA/: exploreRental.ipynb
data/: YouBikeDataTaipei.csv  demo.json
docs/: Overview_YouBike.html  YouBikesPerStation.html
models/: generate_instance.py  rebalance_v1.py
optimization/: run.sh
prototypes/: MapYouBike.html  dataExploration.ipynb
results/: demo.json  demo_unit.json  model_comparison_processed_data_all_stations_weather_500101001.csv  model_comparison_processed_data_all_stations_weather_500101002.csv  model_comparison_processed_data_all_stations_weather_500101003.csv  model_comparison_processed_data_all_stations_weather_500101004.csv  model_comparison_processed_data_all_stations_weather_500101005.csv  training_times_processed_data_all_stations_weather_500101001.csv  training_times_processed_data_all_stations_weather_500101002.csv  training_times_processed_data_all_stations_weather_500101003.csv  training_times_processed_data_all_stations_weather_500101004.csv  training_times_processed_data_all_stations_weather_500101005.csv  visualizingData_20241118.html  weather_impact_comparison.csv
sites/: MapYouBike.html
src/: AnalyzeCurrentDataDB.ipynb  DBIO.py  DistanceMatrix.ipynb  IO.py  OSRMAPIcall.py  app.py  closest_stations.csv  collect_weather_data.py  config.py  createSolutionVisualization.py  createSolutionVisualization_v1.py  createSolutionVisualization_v2-v3.py  createSolutionVisualization_v2-v4.py  (+24 more)
(+607 files in other folders)
